--- a/src/Components/Main/Weekday/Day/Day.module.scss
+++ b/src/Components/Main/Weekday/Day/Day.module.scss
@@ -1,6 +1,7 @@
 @import '../../../../Variables.scss';
 
 .day{
+    margin: 5px;
     padding: 10px;
     flex-grow: 1;
     min-height: 150px;
