--- a/src/Components/Main/Weekday/Weekday.module.scss
+++ b/src/Components/Main/Weekday/Weekday.module.scss
@@ -2,12 +2,5 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 10px;
     flex-wrap: wrap;
-}
-
-@supports not(gap: 10px) {
-    .daily{
-        margin: 10px;
-    }
 }
